tests/ui/codegen/normalization-overflow/recursion-issue-118590.rs
//@ build-fail

fn main() {
    recurse(std::iter::empty::<()>())
}

fn recurse(nums: impl Iterator) {
    if true { return }

    recurse(nums.skip(42).peekable())
    //~^ ERROR: reached the recursion limit while instantiating
}
